--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,7 @@
 
     <!-- JENKINS-64149 asked to clarify user name exclusion rules -->
     <!-- Check by reading git polling log, should contain string "Found excluded author:" -->
+    <echo>curl --fail --silent ${env.JOB_URL}/scmPollLog/</echo>
     <exec executable="curl" failonerror="true">
       <arg value="--fail" />
       <arg value="--silent" />
