Try a different author

--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,7 @@
     <git command="tag">
       <args>
         <arg value="-a"/>
+        <arg value="--author=Mark-E-Waite<mwaite@cloudbees.com>"/>
         <arg value="-m"/>
         <arg value="Annotated tag for ${ant.project.name} build 1.0.${build.number}"/>
         <arg value="${ant.project.name}-1.0.${build.number}"/>
