--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
     <echo>user dir is ${user.dir}</echo>
     <!-- JENKINS-70158 reports that ignore committer strategy is not honored in git plugin 4.14.0. -->
     <!-- Check by reading multibranch Pipeline polling log interactively -->
-    <!-- Check by reading git polling log, should contain string "Found excluded author:" -->
+    <!-- Check by reading git multibranch Pipeline polling log, should contain string "Found excluded author:" -->
     <echo>curl --fail --silent ${env.JOB_URL}/scmPollLog/</echo>
     <exec executable="curl" failonerror="true">
       <arg value="--fail" />
