--- a/build.xml
+++ b/build.xml
@@ -31,13 +31,10 @@
     <!-- JENKINS-70158 reports that ignore committer strategy is not honored in git plugin 4.14.0. -->
     <!-- Check by reading multibranch Pipeline polling log interactively -->
     <!-- Check by reading git multibranch Pipeline polling log, should contain string "Found excluded author:" -->
-    <echo>Job URL is  ${env.JOB_URL}</echo>
-    <echo>Curl URL is  ${env.JOB_URL}../../../indexing/consoleText</echo>
-    <echo>curl --fail --verbose ${env.JOB_URL}../../../indexing/consoleText</echo>
     <exec executable="curl" failonerror="true">
       <arg value="--fail" />
       <arg value="--verbose" />
-      <arg value="${env.JOB_URL}../../../indexing/consoleText" />
+      <arg value="http://mark-pc2.markwaite.net:8080/job/Bugs-Pipeline-Checks/job/JENKINS-26197/indexing/consoleText" />
     </exec>
   </target>
 
