--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="JENKINS-JENKINS-70158" default="increment" basedir=".">
+<project name="JENKINS-70158" default="increment" basedir=".">
 
   <property name="tags.arg" value="--tags"/>
   <property environment="env"/>
@@ -44,10 +44,10 @@
     <element name="args" optional="true" />
     <sequential>
       <exec executable="git" dir="@{dir}">
-        <env key="GIT_AUTHOR_EMAIL"    value="markwaite@yahoo.com" />
-        <env key="GIT_AUTHOR_NAME"     value="Mark Earl Yahoo Waite" />
-        <env key="GIT_COMMITTER_EMAIL" value="markwaite@yahoo.com" />
-        <env key="GIT_COMMITTER_NAME"  value="Mark Earl Yahoo Waite" />
+        <!-- <env key="GIT_AUTHOR_EMAIL"    value="markwaite@yahoo.com" /> -->
+        <!-- <env key="GIT_AUTHOR_NAME"     value="Mark Earl Yahoo Waite" /> -->
+        <!-- <env key="GIT_COMMITTER_EMAIL" value="markwaite@yahoo.com" /> -->
+        <!-- <env key="GIT_COMMITTER_NAME"  value="Mark Earl Yahoo Waite" /> -->
         <arg value="@{command}" />
         <args/>
       </exec>
