--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
     <!-- Check by reading git multibranch Pipeline polling log, should contain string "Found excluded author:" -->
     <exec executable="curl" failonerror="true">
       <arg value="--fail" />
-      <arg value="http://mark-pc2.markwaite.net:8080/job/Bugs-Pipeline-Checks/job/JENKINS-26197/indexing/consoleText" />
+      <arg value="${env.BUILD_URL}../../../indexing/consoleText" />
     </exec>
   </target>
 
@@ -44,10 +44,10 @@
     <element name="args" optional="true" />
     <sequential>
       <exec executable="git" dir="@{dir}">
-        <!-- <env key="GIT_AUTHOR_EMAIL"    value="markwaite@yahoo.com" /> -->
-        <!-- <env key="GIT_AUTHOR_NAME"     value="Mark Earl Yahoo Waite" /> -->
-        <!-- <env key="GIT_COMMITTER_EMAIL" value="markwaite@yahoo.com" /> -->
-        <!-- <env key="GIT_COMMITTER_NAME"  value="Mark Earl Yahoo Waite" /> -->
+        <env key="GIT_AUTHOR_EMAIL"    value="markwaite@yahoo.com" />
+        <env key="GIT_AUTHOR_NAME"     value="Mark Earl Yahoo Waite" />
+        <env key="GIT_COMMITTER_EMAIL" value="markwaite@yahoo.com" />
+        <env key="GIT_COMMITTER_NAME"  value="Mark Earl Yahoo Waite" />
         <arg value="@{command}" />
         <args/>
       </exec>
