--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
     <!-- JENKINS-70158 reports that ignore committer strategy is not honored in git plugin 4.14.0. -->
     <!-- Check by reading multibranch Pipeline polling log interactively -->
     <!-- Check by reading git multibranch Pipeline polling log, should contain string "Found excluded author:" -->
+    <echo>BUILD_URL is ${env.BUILD_URL}</echo>
     <exec executable="curl" failonerror="true">
       <arg value="--fail" />
       <arg value="${env.BUILD_URL}../../../indexing/consoleText" />
